--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="28_Distance_Points.html">28_Distance_Points</a></li>
         <li><a href="29_Collapse_Lines.html">29_Collapse_Lines</a></li>
         <li><a href="30_Find_unique_character.html">30_Find_unique_character</a></li>
+        <li><a href="31_Random.html">30_Random</a></li>
 
     </ul>
 
