--- a/31_Random.html
+++ b/31_Random.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find_unique_character</title>
+    <title>Random</title>
 
 </head>
 
@@ -13,7 +13,7 @@
     <p><a href="index.html">Go back</a></p>
 
 
-    <script src="./js/30_Find_unique_character.js"></script>
+    <script src="./js/31_Random.js"></script>
 </body>
 
 </html>
